# secret-manager

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  screens.html  tsconfig.json  vite.config.ts  vitest.setup.ts
design/: README.md  Secret Manager UI.dc.html
docs/: ARCHITECTURE.md  ROADMAP.md  UI_DESIGN_PROMPT.md
docs/superpowers/plans/: 2026-07-02-vault-security-hardening.md
docs/superpowers/specs/: 2026-07-02-vault-security-hardening-design.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: biometric.rs  crypto.rs  db.rs  error.rs  lib.rs  main.rs  migrate.rs  models.rs  repo.rs  sidecar.rs  state.rs  transfer.rs  vault.rs
src-tauri/src/commands/: mod.rs  projects.rs  secrets.rs  transfer.rs  vault.rs
src-tauri/tests/: persistence.rs
src/components/: AddSecretDialog.tsx  CommandPalette.tsx  ConfirmDialog.tsx  RecoveryCodes.tsx  SecretDetail.tsx  SecretList.tsx  Sidebar.tsx  StrengthMeter.test.tsx  StrengthMeter.tsx  TagInput.tsx  TransferDialogs.tsx  UnlockScreen.test.tsx  UnlockScreen.tsx
src/components/ui/: Dialog.tsx  controls.tsx
src/lib/: clipboard.ts  passwordStrength.test.ts  passwordStrength.ts  tauri.ts  transfer.test.ts  transfer.ts  types.ts  utils.test.ts  utils.ts
src/pages/: Home.tsx  Project.tsx  Settings.tsx
src/screens/: entry.tsx  mock.ts
src/store/: settings.test.ts  settings.ts  ui.ts  vault.test.ts  vault.ts
