[package]
name = "secret-manager"
version = "0.1.0"
description = "Cross-platform desktop app for storing and managing secrets and environment variables"
authors = ["secret-manager"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "secret_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
rusqlite = { version = "0.31", features = ["bundled-sqlcipher-vendored-openssl"] }
ring = "0.17"
argon2 = "0.5"
zeroize = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
base64 = "0.22"
hex = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
